--- a/prompts.ipynb
+++ b/prompts.ipynb
@@ -27,16 +27,13 @@
     "jupyter": {
      "outputs_hidden": false
     },
-    "pycharm": {
-     "name": "#%%\n"
-    },
     "tags": []
    },
    "outputs": [],
    "source": [
     "openai.api_type = \"azure\"\n",
     "openai.api_base = \"\"\n",
-    "openai.api_version = \"2023-03-15-preview\"\n",
+    "openai.api_version = \"\"\n",
     "openai.api_key = os.environ.get(\"OPENAI_API_KEY\", \"\")"
    ]
   },
@@ -70,7 +67,6 @@
     "    mapping = {\n",
     "        \"gpt35\": \"gpt-3.5-turbo-0301\",\n",
     "        \"gpt4-8k\": \"gpt-4-0314\",\n",
-    "        \"gpt4-32k\": \"gpt-4-0314\",\n",
     "    }\n",
     "    encoding = tiktoken.encoding_for_model(mapping.get(model, model))\n",
     "    if real_model := mapping.get(model):\n",
@@ -146,9 +142,6 @@
     "jupyter": {
      "outputs_hidden": false
     },
-    "pycharm": {
-     "name": "#%%\n"
-    },
     "tags": []
    },
    "outputs": [],
@@ -190,9 +183,6 @@
     "jupyter": {
      "outputs_hidden": false
     },
-    "pycharm": {
-     "name": "#%%\n"
-    },
     "tags": []
    },
    "outputs": [],
@@ -207,9 +197,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     },
     "tags": []
    },
@@ -337,9 +324,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -355,9 +339,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     },
     "tags": []
    },
@@ -375,9 +356,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -392,9 +370,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -409,9 +384,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -448,9 +420,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -465,9 +434,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -505,9 +471,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -522,9 +485,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -557,9 +517,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -574,9 +531,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -602,9 +556,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -619,9 +570,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -654,9 +602,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -671,9 +616,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -703,9 +645,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -720,9 +659,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -755,9 +691,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -833,9 +766,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -967,9 +897,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -1002,9 +929,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -1019,9 +943,6 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -1041,18 +962,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "## Description "
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
